--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -9,17 +9,18 @@
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!--    icon CSS     -->
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/comic-relief" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/comic-relief" />
     <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/orkney" type="text/css"/>
-    <link rel="stylesheet" href="/css/app.css">
-    <script src="/js/public/iconfont.js"></script>
-    <link rel="stylesheet" href="/css/icon.css">
-    <link rel="stylesheet" href="/css/icon2.css">
-    <link rel="stylesheet" href="/css/loading.css">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/orkney" />
+    <script type="text/javascript"   th:src="@{/js/public/iconfont.js}"></script>
+
+    <link type="text/css" rel="stylesheet"  th:href="@{/css/app.css}">
+    <link type="text/css" rel="stylesheet"  th:href="@{/css/icon.css}">
+    <link type="text/css" rel="stylesheet"  th:href="@{/css/icon2.css}">
+    <link type="text/css" rel="stylesheet"  th:href="@{/css/loading.css}">
 
 </head>
 <body>
@@ -115,8 +116,9 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
-    <script src="/js/public/common.js"></script>
-    <script src="/js/public/jqthumb.min.js"></script>
+    <script type="text/javascript"   th:src="@{/js/public/common.js}"></script>
+    <script type="text/javascript"   th:src="@{/js/public/jqthumb.min.js}"></script>
+
 
 
 </div>
