--- a/src/main/resources/templates/recipe/edit.html
+++ b/src/main/resources/templates/recipe/edit.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <th:block th:include="/fragment/common.html :: head"></th:block>
+    <th:block th:include="fragment/common.html :: head"></th:block>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-<header th:replace="/fragment/common.html :: header"></header>
+<header th:replace="fragment/common.html :: header"></header>
 <div class="container d-flex flex-column p-5 w-60">
     <input class=" mb-5 border-red-C14A4A" type="text" id="input-title" placeholder="Please enter recipe name"
            style="height:60px;" th:value="${recipeDTO.getRecipeName()}">
@@ -104,7 +104,7 @@
 </div>
 
 
-<th:block th:include="/fragment/common.html :: scripts"></th:block>
+<th:block th:include="fragment/common.html :: scripts"></th:block>
 <script th:inline="javascript">
     let user = [[${user}]]
     let recipeDTO = [[${recipeDTO}]]
