--- a/src/main/resources/templates/search/search.html
+++ b/src/main/resources/templates/search/search.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <th:block th:include="/fragment/common.html :: head"></th:block>
+    <th:block th:include="fragment/common.html :: head"></th:block>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-<header th:replace="/fragment/common.html :: header"></header>
+<header th:replace="fragment/common.html :: header"></header>
 <div class="container d-flex justify-content-center">
     <div class="d-flex flex-column my-5 w-75 animate__fadeInRightBig animate__bounceIn">
         <div class="d-flex flex-column mt-5 mb-5 align-items-center ">
@@ -39,8 +39,8 @@
 </div>
 
 <!-- Footer -->
-<footer th:replace="/fragment/common.html :: footer"></footer>
-<th:block th:include="/fragment/common.html :: scripts"></th:block>
+<footer th:replace="fragment/common.html :: footer"></footer>
+<th:block th:include="fragment/common.html :: scripts"></th:block>
 <!--<script type="text/javascript" src="/js/">-->
 <!--</script>-->
 <script th:inline="javascript">
