--- a/src/main/resources/templates/recipe/add.html
+++ b/src/main/resources/templates/recipe/add.html
@@ -32,7 +32,7 @@
             <svg class="icon" aria-hidden="true">
                 <use xlink:href="#icon-Ingredients"></use>
             </svg>
-            Ingredients
+            Ingredients (Amount)
         </h4>
         <div class="d-flex flex-column mb-4 justify-content-between" id="div-ingredients">
             <div class="d-flex justify-content-between" id="ingred-1"><input class="mr-3 input-red" type="text"
