--- a/src/main/resources/templates/recipe/edit.html
+++ b/src/main/resources/templates/recipe/edit.html
@@ -52,7 +52,7 @@
             <svg class="icon" aria-hidden="true">
                 <use xlink:href="#icon-Ingredients"></use>
             </svg>
-            Ingredients
+            Ingredients (Amount)
         </h3>
         <div class="d-flex flex-column mt-4 justify-content-between" id="div-ingredients">
             <div class="d-flex justify-content-between mb-4" th:id="${'ingred-'+status.count}"
