--- a/template/footer.html
+++ b/template/footer.html
@@ -8,7 +8,7 @@
 
 <body>
   <section id="footer">
-    <div class="inner">
+    <div class="inner h-50">
       <center>
         <div>
           <p>
