--- a/template/header.html
+++ b/template/header.html
@@ -16,50 +16,62 @@
 <body>
   <header id="header">
     <div class="inner">
-      <a  href="/index.html" class="logo"><img src="/images/logo.png" width="70px" height="70px" /></a>
+      <a href="/index.html" class="logo"><img src="/images/logo.png" width="70px" height="70px" /></a>
       <nav id="nav">
-        <a href="/index.html">Home</a>
-        <div class="dropdown">
-          <a href="/mvf/MVF1-Account_management.html">Minimal Viable Features ﹀</a>
-          <div class="dropdown-content">
-            <a  href="/mvf/MVF1-Account_management.html">Account management</a> <br>
-            <a  href="/mvf/MVF2-Slider.html">Slider</a> <br>
-            <a  href="/mvf/MVF3-Data_collection_and_recommendation.html">Kitchen and Pantry System</a>
-            <br>
-            <a  href="/mvf/MVF4-Recipe_information.html">Recipe thumbnail</a><br>
-            <a  href="/mvf/MVF5-Step-by-step_instructions.html">Step-by-step instructions</a> <br>
-            <a  href="/mvf/MVF6-Tags_and_searching.html">Tags and searching</a> <br>
-            <a  href="/mvf/MVF7-Upload_and_manage_posts.html">Upload and manage posts</a> <br>
+        <div class="dropdown" >
+          <a href="/p3/background.html">Project ﹀</a>
+          <div class="dropdown-content" style="width: 200% !important;">
+            <a href="/p3/background.html">Project Background</a>
+            <a href="/p3/progress.html">Project Progress</a>
+            <a href="/p3/learning.html">Challenges and Learning</a>
+            <a href="/p3/processes.html">Project Processes</a>
+            <a href="/p3/skill.html">Skills and Jobs</a>
 
           </div>
         </div>
-          <div class="dropdown">
-            <a href="/evf/EVF1-Like_and_comment.html">Extend Viable Features ﹀</a>
-            <div class="dropdown-content">
-              <a  href="/evf/EVF1-Like_and_comment.html">Like and comment</a> <br>
-              <a  href="/evf/EVF2_Health_risk.html">Health risk</a> <br>
-              <a  href="/evf/EVF3-Collection_favourite.html">Collection and favourite</a>
-              <br>
-              <a  href="/evf/EVF4-Substitution.html">Substitution</a><br>
-              <a  href="/evf/EVF5-Shopping_Helper.html">Shopping Helper</a> <br>
+
+        <div class="dropdown">
+          <a href="/mvf2/MVF1-Account_management.html">Minimal Viable Features ﹀</a>
+          <div class="dropdown-content" style="width: 100% !important;">
+            <a href="/mvf2/MVF1-Account_management.html">Account management</a> <br>
+            <a href="/mvf2/MVF2-Slider.html">Slider</a> <br>
+            <a href="/mvf2/MVF3-Data_collection_and_recommendation.html">Kitchen and Pantry System</a>
+            <br>
+            <a href="/mvf2/MVF4-Recipe_information.html">Recipe thumbnail</a><br>
+            <a href="/mvf2/MVF5-Step-by-step_instructions.html">Step-by-step instructions</a> <br>
+            <a href="/mvf2/MVF6-Tags_and_searching.html">Tags and searching</a> <br>
+            <a href="/mvf2/MVF7-Upload_and_manage_posts.html">Upload and manage posts</a> <br>
+
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <a href="/evf/EVF1-Like_and_comment.html">Extend Viable Features ﹀</a>
+          <div class="dropdown-content" style="width: 100% !important;">
+            <a href="/evf/EVF1-Like_and_comment.html">Like and comment</a> <br>
+            <a href="/evf/EVF2_Health_risk.html">Health risk</a> <br>
+            <a href="/evf/EVF3-Collection_favourite.html">Collection and favourite</a>
+            <br>
+            <a href="/evf/EVF4-Substitution.html">Substitution</a><br>
+            <a href="/evf/EVF5-Shopping_Helper.html">Shopping Helper</a> <br>
           </div>
         </div>
 
 
 
         <div class="dropdown ">
-          <a  href="/other/estimate.html">Plan ﹀</a>
-          <div class="dropdown-content">
-            <a  href="/plan/how.html"> Technologies</a>
-            <a  href="/plan/estimate.html">Estimation Plan</a> <br> </div>
+          <a href="/other/estimate.html">Plan ﹀</a>
+          <div class="dropdown-content"style="width: 170% !important;">
+            <a href="/plan/how.html"> Technologies</a>
+            <a href="/plan/estimate.html">Estimation Plan</a> <br> </div>
         </div>
         <div class="dropdown">
-          <a  href="/github/commits.html">Other ﹀</a>
-          <div class="dropdown-content">
-            <a  href="/github/commits.html">Github Commits</a> <br>
-            <a  href="/other/team-meeting.html ">Team Meetings</a> <br>
-            <a  href="/other/trello-task.html">Trello Task</a> <br>
-            <a  href="/other/github-activity.html">GitHub Activity</a> <br>
+          <a href="/github/commits.html">Other ﹀</a>
+          <div class="dropdown-content" style="width: 160% !important;">
+            <a href="/github/commits.html">Github Commits</a> <br>
+            <a href="/other/team-meeting.html ">Team Meetings</a> <br>
+            <a href="/other/trello-task.html">Trello Task</a> <br>
+            <a href="/github/github-activity.html">GitHub Activity</a> <br>
 
           </div>
         </div>
