--- a/src/main/resources/static/css/icon.css
+++ b/src/main/resources/static/css/icon.css
@@ -14,6 +14,14 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+textarea.iconfont {
+    font-family: "iconfont" !important;
+    font-size: 30px;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 
 .icon-chaxun:before {
     content: "\e60b";
