--- a/src/main/resources/static/css/icon2.css
+++ b/src/main/resources/static/css/icon2.css
@@ -14,6 +14,13 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+textarea.iconfont {
+    font-family: "iconfont" !important;
+    font-size: 30px;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
 .icon-sousuo:before {
     content: "\e8b9";
 }
